--- a/wp-content/themes/dawns/assets/less/global/lib/responsive-768px-979px.less
+++ b/wp-content/themes/dawns/assets/less/global/lib/responsive-768px-979px.less
@@ -14,16 +14,16 @@
 
   // No need to reset .thumbnails here since it's the same @gridGutterWidth
   
-  .home header {
-  	height: 700px!important;
-  }
-  .hero {
-  	height: 700px!important;
-  	background-position: 50% -50px !important;
-  	.art-header-inner {
-  		top: 272px !important;
-  	}
-  }
+	.page-id-14 header {
+		height: 700px!important;
+	}
+	.hero {
+		height: 700px;
+		background-position: 50% -50px !important;
+		.art-header-inner {
+			top: 272px !important;
+		}
+	}
 	#primary {
 		font-size: 16px!important;
 	}
@@ -40,16 +40,16 @@
 		width: 100% !important;
 	}
 	
-}
-
-.email-submit input {
-		margin-bottom: 10px;
+	.email-submit input {
+	margin-bottom: 10px;
 	}
 	.noisetrade {
-		background: none !important;
+		background: none;
 	}
 	
 	.order .btn-solid {
 		margin-bottom: 5px !important;
 		width: 40% !important;
-	}
+	}	
+
+}
