--- a/wp-content/themes/dawns/assets/less/global/navigation.less
+++ b/wp-content/themes/dawns/assets/less/global/navigation.less
@@ -13,7 +13,7 @@
 	letter-spacing: 0.1em;
 	height: 50px;
 	line-height: 50px;
-	.box-shadow(0 2px 5px rgba(0,0,0,0.35);
+	.box-shadow(0 2px 5px rgba(0,0,0,0.35));
 	position: relative;
 	z-index: @zindexFixedNavbar;
 	ul {
@@ -23,7 +23,7 @@
 		zoom: 1;
 		li {
 			display: table-cell;
-			width: 100%;
+			width: 12.5%;
 			overflow: hidden;
 			height: 52px;
 			line-height: 50px;
