--- a/wp-content/themes/dawns/assets/less/global/style.less
+++ b/wp-content/themes/dawns/assets/less/global/style.less
@@ -28,3 +28,10 @@ Tags: dawns, music
 
 // Fonts CSS
 @import "fonts.less";
+
+// Responsive include
+@import "lib/responsive.less";
+
+
+.gigpress-table { color: #333; }
+tr.gigpress-header th { color: #fff !important; }
