--- a/wp-content/themes/dawns/assets/less/global/lib/responsive.less
+++ b/wp-content/themes/dawns/assets/less/global/lib/responsive.less
@@ -32,17 +32,10 @@
 // ------------------
 
 // Phones to portrait tablets and narrow desktops
-@import "responsive-767px-max.less";
-
-// Tablets to regular desktops
-@import "responsive-768px-979px.less";
+// @import "responsive-767px-max.less";
 
 // Large desktops
 @import "responsive-1200px-min.less";
 
-
-// RESPONSIVE NAVBAR
-// ------------------
-
-// From 979px and below, show a button to toggle navbar contents
-@import "responsive-navbar.less";
+// Tablets to regular desktops
+@import "responsive-768px-979px.less";
